# org.s7s.instance.server

./: Cargo.toml  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml  publish.yml  test.yml
src/main/java/: module-info.java
src/main/java/com/sandpolis/server/vanilla/: Main.java  Server.java
src/main/java/org/s7s/server/java/: Main.java
src/main/rust/: api.rs  connection.rs  database.rs  group.rs  main.rs  server.rs  user.rs
src/main/rust/api/v1/server/: users.rs
