[package]
name = "sandpolis-server"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "server"
path = "src/main/rust/main.rs"

[dependencies]
actix-session = "0.5.0-beta.7"
actix-web = "4.0.0-beta.21"
anyhow = "1.0"
async-stream = "0.3"
env_logger = "0.9"
log = "0.4"
reqwest = {version = "0.11.9", features = ["cookies", "json"]}
serde = "1"
serde_json = "1"